Manifest/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 80   
      nodePort: 30001  
  type: NodePort
