Manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  labels:
    app: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-app.example.com    
      http:
        paths:
          - path: /               
            pathType: Prefix       
            backend:
              service:
                name: my-app-service  
                port:
                  number: 80
